--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ footer .widget h5 {
               <!-- ChatGPT Logo Link -->
               <li>
                   <a href="https://chat.openai.com" target="_blank" style="margin-right: 40px; font-family: 'IBM Plex Sans', sans-serif; color: white;">
-                      <img src="chatgpt-logo.png" alt="ChatGPT" style="height: 30px; width: auto;">
+                      <img src="assets/images/pngwing.com.png" alt="" style="height: 30px; width: auto;">
                   </a>
               </li>
           </ul>
